--- a/components/MainPage.module.scss
+++ b/components/MainPage.module.scss
@@ -1,82 +1,78 @@
 @import "../breakpoints.scss";
 
 .mainPageComponent {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    border: 2px solid lightgray;
-    border-radius: 3px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border: 2px solid lightgray;
+  border-radius: 3px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .welcomeText {
-    color: gray;
-    font-size: 10px;
-    margin: 1px 1px;
-    text-align: center;
+  color: gray;
+  font-size: 10px;
+  margin: 1px 1px;
+  text-align: center;
 
-    @include sm {
-        font-size: 25px;
-        margin-bottom: 40px;
-    }
+  @include sm {
+    font-size: 25px;
+    margin-bottom: 40px;
+  }
 
-    @include md {
-        font-size: 30px;
-        margin: 10px;
-        margin-bottom: 60px;
-    }
+  @include md {
+    font-size: 30px;
+    margin: 10px;
+    margin-bottom: 60px;
+  }
 }
 
 .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-
-
 .link {
-    color: white;
-    text-decoration: none;
-    text-align: center;
-    font-size: 10px;
-    margin-top: 15px;
-    cursor: pointer;
+  color: white;
+  text-decoration: none;
+  text-align: center;
+  font-size: 10px;
+  margin-top: 15px;
+  cursor: pointer;
 
-    @include sm {
-        font-size: 20px;
-    }
+  @include sm {
+    font-size: 20px;
+  }
 
-    @include md {
-        font-size: 25px;
-        margin: 10px;
-    }
-
-
+  @include md {
+    font-size: 25px;
+    margin: 10px;
+  }
 }
 
 .imgWrapper {
-    width: 200px;
-    height: 300px;
-    position: relative;
+  width: 200px;
+  height: 300px;
+  position: relative;
 
-    @include sm {
-        width: 300px;
-        height: 400px;
-    }
+  @include sm {
+    width: 300px;
+    height: 400px;
+  }
 
-    @include md {
-        width: 500px;
-        height: 600px;
-    }
+  @include md {
+    width: 500px;
+    height: 600px;
+  }
 }
 
 .discoverProductsBtn {
-    background-color: #FFCBA5;
-    border-radius: 8px;
-    padding: 3px;
-    border: none;
+  background-color: #ffcba5;
+  border-radius: 8px;
+  padding: 3px;
+  border: none;
 }
