--- a/components/ProductCard.module.scss
+++ b/components/ProductCard.module.scss
@@ -1,32 +1,30 @@
-@import '../breakpoints.scss';
+@import "../breakpoints.scss";
 
 .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
-    @include md {
-        flex-direction: row;
-    }
+  @include md {
+    flex-direction: row;
+  }
 }
 
 .price {
-    display: inline-block;
-    margin-top: 1em;
-    margin-bottom: 1em;
-    font-size: 1.2em;
+  display: inline-block;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  font-size: 1.2em;
 }
 
-.cardMedia{
+.cardMedia {
+  @include md {
+    min-width: 300px;
+    min-height: 400px;
+  }
 
-    @include md{
-        min-width:300px;
-        min-height:400px;
-    }
-
-    @include lg{
-        min-width:500px;
-        min-height:600px;
-    }
+  @include lg {
+    min-width: 500px;
+    min-height: 600px;
+  }
 }
-
