--- a/components/MainPage.module.scss
+++ b/components/MainPage.module.scss
@@ -10,6 +10,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
 }
 
 .welcomeText {
@@ -71,8 +72,14 @@
 }
 
 .discoverProductsBtn {
+  width:80%;
+  margin-top:1em;
   background-color: #ffcba5;
   border-radius: 8px;
   padding: 3px;
   border: none;
+
+  @include md{
+    width:90%;
+  }
 }
